# SecondYear

./: .gitignore  README.md
.github/workflows/: main.yml
BeginTask-0/: ArrayHandler.h  CMakeLists.txt  main.cpp  tests.cpp
BeginTask-0/build-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main
BeginTask-0/build-Debug/.cmake/api/v1/reply/: cache-v2-faaaf9f5fcaa70f8ad00.json  cmakeFiles-v1-1ac0fb6850668cad0199.json  codemodel-v2-8752f646013cba2a2e4d.json  index-2024-09-25T07-05-03-0733.json  toolchains-v1-e5c58cd024125e936b1a.json
BitField-2/: BitField.cpp  BitField.h  CMakeLists.txt  Matrix.h  Set.cpp  Set.h  Vector.h  main.cpp  tests.cpp
Postfix/: TFormula.h  TStack.h  main.cpp
TMatrix/: Matrix.h  Vector.h  matrix_sample.cpp  vector_sample.cpp
